--- a/main/BUILD
+++ b/main/BUILD
@@ -1,5 +1,6 @@
 cc_binary(name = "a.out",
           srcs = ["main.cc"],
+          # deps = ["//utils:utils", "@com_google_tcmalloc//tcmalloc"],
           deps = ["//utils:utils"],
-          malloc = "@com_google_tcmalloc//tcmalloc",
+          malloc = "@com_google_tcmalloc//tcmalloc"
 )
