--- a/utils/BUILD
+++ b/utils/BUILD
@@ -1,5 +1,6 @@
-cc_library(name = "utils",
-           srcs = ["utils.cc"],
-           hdrs = ["utils.h"],
-           visibility = ["//visibility:public",],
+cc_library(
+    name = "utils",
+    srcs = ["utils.cc"],
+    hdrs = ["utils.h"],
+    visibility = ["//visibility:public"],
 )
